# image-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
cdk.out/: ImagePipelineStack.assets.json  ImagePipelineStack.metadata.json  ImagePipelineStack.template.json  manifest.json  tree.json
cdk.out/asset.29ad8f0bcbfd939e9be2ae3544fe949d9dd54175c8d5c310b0b52292b13f87da/: .dockerignore
cdk.out/asset.29ad8f0bcbfd939e9be2ae3544fe949d9dd54175c8d5c310b0b52292b13f87da/worker/: downloader.py  errors.py
cdk.out/asset.a6bd899b5a24d6d3f4d4b8c3403ed8be37548ecda0d4de6fa94cbb9907282e6c/: Dockerfile  pyproject.toml
cdk.out/asset.a6bd899b5a24d6d3f4d4b8c3403ed8be37548ecda0d4de6fa94cbb9907282e6c/submitter/: submit.py
cdk.out/asset.a6bd899b5a24d6d3f4d4b8c3403ed8be37548ecda0d4de6fa94cbb9907282e6c/worker/: processor.py  requirements.txt  uploader.py
evaluation/: concurrency_20260526-115457.csv  evaluation-results.md  generate_images.py  idempotency_test.py  plot_run.py  run_20260525-103418.csv  run_20260525-104422.csv  run_concurrency_test.py  run_scaling_test.py
infrastructure/: app.py  image_pipeline_stack.py
shared/: config.py
submitter/: submit.py
tests/: conftest.py  test_downloader.py  test_metadata.py  test_processor.py  test_uploader.py
worker/: downloader.py  errors.py  handler.py  metadata.py  processor.py  uploader.py
