[project]
name = "image-pipeline"
version = "0.1.0"
description = "Distributed, scalable, fault-tolerant image-processing pipeline on AWS"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]
infra = [
    "aws-cdk-lib",
    "constructs",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
