[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-pipeline"
version = "0.1.0"
description = "Distributed, scalable, fault-tolerant image-processing pipeline on AWS"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "matplotlib",
    "moto[s3,dynamodb,sqs]",
]
infra = [
    "aws-cdk-lib",
    "constructs",
]

[tool.setuptools]
packages = ["worker", "shared", "submitter"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
